--- a/pair.html
+++ b/pair.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TONIC MD PAIR</title>
+  <title>QUEEN ELISA PAIR</title>
   <link rel="stylesheet" href="css/all.min.css">
   <style>
     body {
