--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
             "@context": "https://schema.org",
             "@type": "Organization",
             "url": "https://railway.app",
-            "logo": "https://files.catbox.moe/39z8jd.jpg"
+            "logo": "https://i.ibb.co/D39jtpk/temp.jpg"
     }
 
     .button-container {
@@ -116,10 +116,10 @@
       <div></div>
     <a href="/pair" class="button" target="_blank"> <span>PAIRING-CODE</span> </a> <br>
      <a href="/qr" class="button" target="_blank"> <span>QR-CODE</span> </a> <br>
-    <a href="https://github.com/Ayanmdoz/QUEEN-ELISA/fork" class="button" target="_blank"> <span>FORK QUEEN ELISA</span> </a> <br> </a>
+    <a href="https://github.com/tristany7122/QUEEN-ELISA-MD/fork" class="button" target="_blank"> <span>FORK QUEEN ELISA</span> </a> <br> </a>
     <a href="https://whatsapp.com" class="button" target="_blank"> <span>WhatsApp</span> </a> <br>    <p>HAVE ANY ERROR CLICK ERROR BUTTON</p>
 
-    <a href="https://wa.me/258863956800" class="button" target="_blank"> <span>ERROR</span> </a> <br>
+    <a href="https://wa.me/27634624586" class="button" target="_blank"> <span>ERROR</span> </a> <br>
 
     <footer>
      QUEEN ELISA INC. &copy; <span id="currentYear"></span>
