--- a/pair.html
+++ b/pair.html
@@ -10,7 +10,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://files.catbox.moe/d79cay.jpg"); /* Set the background image */
+      background-image: url("https://i.ibb.co/D39jtpk/temp.jpg"); /* Set the background image */
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -184,7 +184,7 @@
         </div>
       </div>
     </div>
-    <div class="glowing-text">Powered by ᴀʏᴀɴ ꜱᴇᴠᴇɴ ᴍᴏᴅᴢ</div>
+    <div class="glowing-text">Powered by tristan</div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   <script>
